<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- String for app name -->
    <string name="app_name">My Inventory Med</string>

    <!-- Activity Titles -->
    <string name="app_name_splash">Inventory Med</string>

    <!-- Labels -->
    <string name="label_legal_property">FDP development - rev.1.0</string>
    <string name="label_catalog">Inventory Medicine</string>
    <string name="label_details">Medicine Details</string>
    <string name="label_editor_activity_title_new_med">Add New Medicine</string>
    <string name="label_editor_activity_title_edit_med">Edit Medicine</string>
    <string name="label_insert_dummy_med">Insert Dummy Med</string>
    <string name="label_positive_show_message">OK</string>
    <string name="label_negative_show_message">Cancel</string>
    <string name="label_discard_show_message">Discard</string>
    <string name="label_keep_editing_show_message">Keep Editing</string>
    <string name="label_all_medicines_deleted">All medicines deleted</string>
    <string name="label_delete_med_successful">Medicine successfully deleted</string>
    <string name="label_insert_med_successful">Medicine successfully inserted</string>
    <string name="label_update_med_successful">Medicine successfully updated</string>
    <string name="label_title_show_message">Attention!!!</string>
    <string name="label_message_delete_all_med">"Are you sure to want to delete all medicines inventory ?"</string>
    <string name="label_message_delete_med">"Are you sure to want to delete this medicine ?"</string>
    <string name="label_delete_dummy_med">Delete All Dummy Med</string>
    <string name="label_menu_delete_med">Delete</string>
    <string name="label_menu_edit_med">Edit</string>
    <string name="label_menu_save_med">Save</string>
    <string name="label_exp_date">Exp Date: <xliff:g example="2020/01/01" id="exp_date">%s</xliff:g></string>
    <string name="label_details_med_name">Name</string>
    <string name="label_details_med_type">Type</string>
    <string name="label_details_med_quantity">Quantity</string>
    <string name="label_details_med_price">Price(€)</string>
    <string name="label_details_med_disc_price">Discount Price(€)</string>
    <string name="label_details_med_exp_date">Expiry Date</string>
    <string name="label_details_med_sup_name">Supplier Name</string>
    <string name="label_details_med_sup_email">Supplier Email</string>
    <string name="label_details_med_sup_phone">Supplier Phone</string>
    <string name="label_details_med_note">Note</string>
    <string name="label_editor_med_name">Name *</string>
    <string name="label_editor_med_type">Type *</string>
    <string name="label_editor_med_quantity">Quantity *</string>
    <string name="label_editor_med_price">Price(€) *</string>
    <string name="label_editor_med_disc_price">Discount Price(€)</string>
    <string name="label_editor_med_exp_date">Expiry Date *</string>
    <string name="label_editor_med_sup_name">Supplier Name</string>
    <string name="label_editor_med_sup_email">Supplier Email</string>
    <string name="label_editor_med_sup_phone">Supplier Phone</string>
    <string name="label_editor_med_note">Note</string>
    <string name="label_hint_editor_med_name">Insert name of medicine</string>
    <string name="label_hint_editor_med_quantity">Insert quantity</string>
    <string name="label_hint_editor_med_price">Insert price</string>
    <string name="label_hint_editor_med_disc_price">Insert Discount (if applicable)</string>
    <string name="label_hint_editor_med_exp_date">(yyyy/mm/dd)</string>
    <string name="label_hint_editor_med_sup_name">Insert supplier name</string>
    <string name="label_hint_editor_med_sup_email">Insert supplier email</string>
    <string name="label_hint_editor_med_sup_phone">Insert supplier phone</string>
    <string name="label_hint_editor_med_note">Insert note (if applicable)</string>
    <string name="label_editor_med_info">Required fields *</string>
    <string name="label_type_med_liquido">Liquido</string>
    <string name="label_type_med_supposte">Supposte</string>
    <string name="label_type_med_pasticche">Pasticche</string>
    <string name="label_type_med_sciroppo">Sciroppo</string>
    <string name="label_type_med_crema">Crema</string>
    <string name="label_type_med_gel">Gel</string>
    <string name="label_type_med_unknown">Sconosciuto</string>
    <string name="label_create_chooser_activity">Select Picture</string>
    <string name="label_create_chooser_email">Email Client</string>
    <!--
    Price for the medicine. It will be shown in the format of
    "Price: €10" where €10 is the price.
    <string name="label_price">Price: €%.2f</string>
    <string name="label_price_discount">Discount: €%.2f</string>
    -->
    <string name="label_price">Price: €<xliff:g example="€10" id="price">%.2f</xliff:g></string>
    <string name="label_price_discount">Discount Price: € <xliff:g example="€10" id="discount">%.2f</xliff:g></string>

    <!-- Info for dialog message -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing ?</string>

    <!-- Info for empty messages -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started, add a medicine with button below</string>
    <string name="empty_discount_price">No discount: € <xliff:g example="€00" id="no_discount">%.2f</xliff:g></string>
    <string name="empty_discount_price_details">No discount</string>
    <string name="empty_image_med_details">No image medicine available</string>
    <string name="empty_info_med">Insert all fields required to save medicine data</string>
    <string name="empty_image">Image required for this insertion</string>
    <string name="empty_number_supplier">No number supplier is present.\n\nNo call is Available</string>

    <!-- Error messages -->
    <string name="error_delete_all_medicines">Failed to delete all medicines</string>
    <string name="error_delete_med_failed">Failed to delete current medicine</string>
    <string name="error_delete_med_successful">Medicine successfully deleted</string>
    <string name="error_picking_image">Error picking image</string>
    <string name="error_empty_name">Error empty name medicine</string>
    <string name="error_empty_quantity">Error empty quantity medicine</string>
    <string name="error_empty_price">Error empty price medicine</string>
    <string name="error_empty_exp_date">Error empty exp date medicine</string>
    <string name="error_insert_med_failed">Failed to insert current medicine</string>
    <string name="error_update_med_failed">Failed to update current medicine</string>
    <string name="error_negative_value">No negative value are allowed</string>
    <string name="error_no_client">No Client</string>
    <string name="error_no_package_manager">No Package Manager</string>

</resources>
