<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_list_item"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_label_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/padding_start"
            android:text="@string/label_editor_med_info"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/editor_med_name"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_name"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_name" />

            <EditText
                android:id="@+id/et_value_editor_med_name"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_type"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_type"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_type" />

            <Spinner
                android:id="@+id/spinner_med_type"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/secondary_text_edit_details" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_quantity"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_quantity"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_quantity" />

            <EditText
                android:id="@+id/et_value_editor_med_quantity"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_quantity"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_price"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_price"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_price" />

            <EditText
                android:id="@+id/et_value_editor_med_price"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_price"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_discount"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_discount"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_disc_price" />

            <EditText
                android:id="@+id/et_value_editor_med_discount"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_disc_price"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_exp_date"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_exp_date"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_exp_date" />

            <EditText
                android:id="@+id/et_value_editor_med_exp_date"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_exp_date"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_sup_name"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_sup_name"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_sup_name" />

            <EditText
                android:id="@+id/et_value_editor_med_sup_name"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_sup_name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_sup_phone"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_sup_phone"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_sup_phone" />

            <EditText
                android:id="@+id/et_value_editor_med_sup_phone"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_sup_phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_med_sup_email"
            style="@style/LayoutDetailsTheme">

            <TextView
                android:id="@+id/tv_label_editor_med_sup_email"
                style="@style/LayoutLabelEditorTheme"
                android:text="@string/label_editor_med_sup_email" />

            <EditText
                android:id="@+id/et_value_editor_med_sup_email"
                style="@style/LayoutTextEditorDetailsTheme"
                android:hint="@string/label_hint_editor_med_sup_email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_editor_med"
            style="@style/LayoutImageMedicine"
            android:src="@drawable/ic_image_not_found" />

        <LinearLayout
            android:id="@+id/editor_med_note"
            style="@style/LayoutDetailsTheme"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_label_editor_med_note"
                style="@style/LayoutLabelNoteTheme"
                android:text="@string/label_editor_med_note" />

            <EditText
                android:id="@+id/et_value_editor_med_note"
                style="@style/LayoutTextEditorDetailsNoteTheme"
                android:hint="@string/label_hint_editor_med_note"
                android:inputType="text"
                android:maxLines="10" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_30dp">
        </View>

    </LinearLayout>

</ScrollView>


