<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the list of pets -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/padding_end"
    android:paddingStart="@dimen/padding_start"
    android:paddingTop="@dimen/padding_top">

    <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/colorListItem"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_med_name"
            style="@style/TextNameCatalogTheme"
            android:text="med_name" />

        <TextView
            android:id="@+id/tv_med_type"
            style="@style/TextTypeCatalogTheme"
            android:text="med_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_med_exp_date"
                android:layout_width="@dimen/dimen_0dp"
                style="@style/TextExpDateCatalogTheme"
                android:text="@string/label_exp_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingTop="@dimen/padding_top">

            <TextView
                android:id="@+id/tv_med_price"
               style="@style/TextPriceCatalogTheme"
                android:text="@string/label_price" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/tv_med_price_discount"
                style="@style/TextDiscountPriceCatalogTheme"
                android:text="@string/label_price_discount" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_med_quantity"
        style="@style/TextQtyCatalogTheme"
        android:text="Qty" />

    <ImageView
        android:id="@+id/img_shopping_cart"
        style="@style/ImageSaleButtonTheme"
        android:src="@drawable/ic_shopping_cart" />
</LinearLayout>